[tool.poetry]
name = "flask-learn"
version = "0.1.0"
description = ""
authors = ["Gura-san <gorn89@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
